updated and added prof links

--- a/templates/index.html
+++ b/templates/index.html
@@ -691,9 +691,11 @@
                 <h5>Andrew Boyer</h5>
                 <p>Executive Director</p>
                 <p class="figure-caption">All Teams</p>
-                <a href="https://www.linkedin.com/in/andrew-boyer-1771791b0" target="_blank"><i
+                <a href="https://www.linkedin.com/in/asboyer" target="_blank"><i
                         class="fab fa-linkedin fa-lg" style="color: white" aria-hidden="true"></i></a>
-                <a href="https://github.com/asboyer2" target="_blank"><i class="fab fa-github fa-lg"
+                <a href="https://github.com/asboyer" target="_blank"><i class="fab fa-github fa-lg"
+                        style="color: white" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/asboyer_" target="_blank"><i class="fab fa-twitter fa-lg"
                         style="color: white" aria-hidden="true"></i></a>
                 <a href="https://open.spotify.com/user/uuzdbyuye92sxqjltw955qm9n?si=rPFH2WO_TQOwm8TH_PPzVQ"
                     target="_blank"><i class="fab fa-spotify fa-lg" style="color: white" aria-hidden="true"></i></a>
