social media links

--- a/templates/index.html
+++ b/templates/index.html
@@ -834,18 +834,23 @@
                 </a>
             </div>
             <div class="col-md-1 col-sm-2 d-flex justify-content-center">
-                <a href="https://www.instagram.com/waylandcomputer/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/reboothacks/" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-instagram fa-3x"></i>
                 </a>
-            </div>
+            </div><!-- 
             <div class="col-md-1 col-sm-2 d-flex justify-content-center">
                 <a href="https://www.facebook.com/groups/236451944678953" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-facebook fa-3x"></i>
                 </a>
+            </div> -->
+            <div class="col-md-1 col-sm-2 d-flex justify-content-center">
+                <a href="https://github.com/reboothacks" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-github-square fa-3x"></i>
+                </a>
             </div>
             <div class="col-md-1 col-sm-2 d-flex justify-content-center">
-                <a href="https://github.com/Wayland-CS-Club" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-github-square fa-3x"></i>
+                <a href="https://twitter.com/reboothcks" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-twitter fa-3x"></i>
                 </a>
             </div>
         </div>
