--- a/templates/index.html
+++ b/templates/index.html
@@ -686,7 +686,9 @@
             </figcaption>
         </figure>
         <figure class="col-lg-3 col-md-4">
-            <img src="../../static/assets/people/Andrew.png" alt="Andrew Boyer" width=200 height=200 />
+            <a target="_blank" href="https://asboyer.com">
+                <img src="../../static/assets/people/Andrew.png" alt="Andrew Boyer" width=200 height=200 />
+            </a>
             <figcaption>
                 <h5>Andrew Boyer</h5>
                 <p>Executive Director</p>
