--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
     <br>
     <div class="row justify-content-center">
         <div class="col-sm-5 col-md-6">
-            <a class="slidee btn btn-block btn-outline-success" href="/projects">Check
-                out all the projects!</a>
+            <a class="slidee btn btn-block btn-outline-success" href="/projects">Check out
+                the winning projects!</a>
         </div>
     </div>
     <br /><br />
@@ -31,11 +31,10 @@
                 rel="noopener noreferrer">Join Discord</a>
         </div>
         <div class="col-sm-4 col-md-3">
-            <a class="slidee btn btn-block btn-outline-success" href="/challenge">Challenge</a>
+            <a class="slidee btn btn-block btn-outline-success" href="/challenge">The Mission</a>
         </div>
         <div class="col-sm-4 col-md-3">
-            <a class="slidee btn btn-block btn-outline-success" href="https://www.youtube.com/watch?v=28rGs5B5iTg">Watch
-                Judging & Presentations</a>
+            <a class="slidee btn btn-block btn-outline-success" href="https://www.youtube.com/watch?v=28rGs5B5iTg">Judging & Presentations</a>
         </div>
         <!-- <div class="col-sm-4 col-md-3">
             <a class="slidee btn btn-block btn-outline-success typeform-share"
