--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <br>
     <div class="row justify-content-center">
         <div class="col-sm-5 col-md-6">
-            <a class="slidee btn btn-block btn-outline-success" href="/projects">Check out
+            <a class="slidee btn btn-block btn-outline-success" href="/winners">Check out
                 the winning projects!</a>
         </div>
     </div>
