cleaned up winners page

--- a/templates/winners.html
+++ b/templates/winners.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <section id="projects" class="mainbg container-fluid">
-    <h1>Winners</h1>
+    <h1 style="font-size: 75px; margin: 50px">Winners</h1>
     
     <div class="row justify-content-center">
         <div class="col-md-4 col-sm-8">
@@ -46,46 +46,57 @@
 
     </div>
 
+    <div style="padding: 30px"></div>
+
     <div class="row justify-content-center custom-flex">
         <div class="col-md-3 col-sm-6 flex-1 my-auto">
             <h3>EduCaptcha</h3>
             <h6>Most innovative</h6>
         </div>
         <div class="col-md-3 col-sm-6 flex-5">
-            <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=5696" target="_blank" rel="noopener noreferrer" role="button">
-                <img src="../../static/assets/educapcha.png" alt="Presentation"/>
+            <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=5696" target="_blank" rel="noopener noreferrer" role="button" style="margin-bottom: 15px;">
+                <img src="../../static/assets/educapcha.png" alt="Presentation" style=" border: 10px solid #111; padding: 0"/>
             </a>
-            <br>
-            <a href="https://github.com/KAJMHackathonTeam/EduCaptcha" target="_blank" rel="noopener noreferrer">Code</a>
+            <a href="https://github.com/KAJMHackathonTeam/EduCaptcha" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-lg" aria-hidden="true" ></i></a>
         </div>
         <div class="col-md-3 col-sm-6 flex-2 my-auto">
             <h3>FoOrWiLe</h3>
+            <h6>Best beginner hack</h6>
+
         </div>
         <div class="col-md-3 col-sm-6 flex-6">
-            <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=8820" target="_blank" rel="noopener noreferrer" role="button">
-            <img src="../../static/assets/foorwile.png" alt="Presentation"/>
+            <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=8820" target="_blank" rel="noopener noreferrer" role="button" style="margin-bottom: 15px;">
+            <img src="../../static/assets/foorwile.png" alt="Presentation" style=" border: 10px solid #111; padding: 0"/>
             </a>
-            <br>
-            <span><a href="http://foorwile.me/organization-and-focus-in-remote-learning/" target="_blank" rel="noopener noreferrer">Website</a> &
-            <a href="https://github.com/nifelover/organization-and-focus-in-remote-learning" target="_blank" rel="noopener noreferrer">Code</a></span>
+            <span>
+                <a href="https://github.com/nifelover/organization-and-focus-in-remote-learning" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-lg" aria-hidden="true" style="margin-right: 15px; margin-left:15px ;"></i></a>
+
+                <a href="http://foorwile.me/organization-and-focus-in-remote-learning/" target="_blank" rel="noopener noreferrer"><i class="fas fa-link fa-lg" aria-hidden="true" ></i></a>
+            </span>
         </div>
         <div class="col-md-3 col-sm-6 flex-3 my-auto">
             <h3>WHS Assassin</h3>
+            <h6>People's choice</h6>
+
         </div>
         <div class="col-md-3 col-sm-6 flex-7">
-            <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=4446" target="_blank" rel="noopener noreferrer" role="button">
-                <img src="../../static/assets/whsassassin.png" alt="Presentation"/>
+            <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=4446" target="_blank" rel="noopener noreferrer" role="button" style="margin-bottom: 15px;">
+                <img src="../../static/assets/whsassassin.png" alt="Presentation" style=" border: 10px solid #111; padding: 0"/>
             </a>
-            <br>
-            <span><a href="https://whsassassin.com" target="_blank" rel="noopener noreferrer">Website</a> &
-            <a href="https://github.com/minglethepringle/whsassassin" target="_blank" rel="noopener noreferrer">Code</a></span>
+            <span>
+                <a href="https://github.com/minglethepringle/whsassassin" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-lg" aria-hidden="true" style="margin-right: 15px; margin-left:15px ;"></i></a>
+
+                <a href="https://whsassassin.com" target="_blank" rel="noopener noreferrer"><i class="fas fa-link fa-lg" aria-hidden="true" ></i></a>
+            </span>
         </div>
         <div class="col-md-3 col-sm-6 flex-4 my-auto">
             <h3>Library Aid</h3>
+            <h6>EchoAR challenge</h6>
+
         </div>
         <div class="col-md-3 col-sm-6 flex-8">
             <a class="btn" href="https://youtu.be/28rGs5B5iTg?t=8552" target="_blank" rel="noopener noreferrer" role="button">
-                <img src="../../static/assets/libraryaid.png" alt="Presentation"/>
+                <img src="../../static/assets/libraryaid.png" alt="Presentation" style=" border: 10px solid #111; padding: 0"/>
             </a>
         </div>
     </div>
